# neural_transfer

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
neural_transfer/: config.py
neural_transfer/dataset/: make_dataset.py
neural_transfer/features/: build_features.py
neural_transfer/models/: deep_api.py  file_utils.py  image_utils.py  style_transfer.py
neural_transfer/tests/: test_unit_model.py
neural_transfer/visualization/: visualize.py
notebooks/: 1.0-neural_transfer_start.ipynb
