# -*- coding: utf-8 -*-
[metadata]
name = neural_transfer
summary = A module to apply neural transfer in pytorch.
description-file =
    README.md
author = Silke Donayre (KIT)
author-email = silke.holtz@student.kit.edu
version = 0.0.1
license = MIT
home-page = https://github.com/silkedh/neural_transfer
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    neural_transfer

[entry_points]

deepaas.v2.model = 
    neural_transfer = neural_transfer.models.deep_api

